--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^6.4.5",
     "@prisma/client": "^6.3.1",
     "@tailwindcss/postcss": "^4.0.6",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.7",
     "mongodb": "^6.13.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
@@ -26,9 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8.5.2",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
