--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.5",
+    "@mui/material-nextjs": "^6.4.3",
     "@prisma/client": "^6.3.1",
     "@tailwindcss/postcss": "^4.0.6",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
-    "mongodb": "^6.13.0",
+    "mongodb": "^6.13.1",
     "next": "15.1.7",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
