--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
-    "@mui/material": "^6.4.5",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
     "@prisma/client": "^6.3.1",
     "@tailwindcss/postcss": "^4.0.6",
