--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.89.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
