--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "mongodb": "^6.13.1",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
