--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,6 +24,7 @@ WORKDIR /app
 
 # Copy the built application from the builder stage
 COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/.env.local ./.env.local
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/node_modules ./node_modules
