--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,17 +20,20 @@
     "@prisma/client": "^6.3.1",
     "@tailwindcss/postcss": "^4.0.6",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "mongodb": "^6.13.1",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
