--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
