example env updates

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,5 @@ MONGODB_URI=mongo://
 MONGODB_NS=dev
 AUTH_SECRET="[refer to our docs]"
 AUTH_TRUST_HOST="";
+AUTH_ISSUER="[frontend domain]"
+AUTH_AUDIENCE="[backend domain]"
