--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,9 @@ PORT=5000
 DATABASE_URL=mongodb://
 GROQ_API_KEY=replace
 AI_BASE_URL=https://api.groq.com/openai/v1
+AI_MODEL=llama-3.3-70b-versatile
+
+AUTH_SECRET="[match to frontend]"
+AUTH_ISSUER="[frontend domain]"
+AUTH_AUDIENCE="[backend domain]"
+AUTH_ADMIN="[super secret password]"
