--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,17 @@
 # Use the official Node.js 18 image as the base image
 FROM node:22-alpine
 
+# Set up PNPM
+RUN npm install -g pnpm
+
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package.json package-lock.json ./
+# Copy package.json and pnpm-lock.yaml
+COPY package.json pnpm-lock.yaml ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies using pnpm
+RUN pnpm install
 
 # Copy the rest of the application code
 COPY . .
@@ -17,4 +20,4 @@ COPY . .
 EXPOSE 5000
 
 # Start the application
-CMD ["npm", "start"]
+CMD ["pnpm", "start"]
