--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,12 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@mui/material-nextjs": "^6.4.3",
-    "@prisma/client": "^6.3.1",
     "@tailwindcss/postcss": "^4.0.6",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
+    "jose": "^6.0.10",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
@@ -31,12 +32,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "prisma": "^6.3.1",
     "typescript": "^5"
   }
 }
