Callback for website after signout

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_API_URL=URL
+NEXT_PUBLIC_API_URL=FE-URL
+NEXTAUTH_URL=FE-URL
 MONGODB_URI=mongo://
 MONGODB_NS=dev
 AUTH_SECRET="[refer to our docs]"
