tweak front page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.9.4",
     "jsonwebtoken": "^9.0.2",
